--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <button class="accordion-btn">Что делать, если UDID в чёрном списке?</button>
       <div class="accordion-content">
         <p>Есть два варианта:<br>
-        1. Ждать 1–180 дней, пока Apple снимет блокировку.<br>
-        2. Купить супер-моментальный сертификат (обходит blacklist).</p>
+        1) Ждать 1–180 дней, пока Apple снимет блокировку.<br>
+        2) Купить супер-моментальный сертификат (обходит blacklist).</p>
       </div>
 
       <button class="accordion-btn">Сертификат привязан к Apple ID?</button>
@@ -82,13 +82,12 @@
 
       <button class="accordion-btn">Могут ли заблокировать мой Apple ID?</button>
       <div class="accordion-content">
-        <p>Нет. Apple блокирует только UDID устройства, Apple ID в безопасности.</p>
+        <p>Нет. Apple может заблокировать только UDID устройства, Apple ID в безопасности.</p>
       </div>
 
       <button class="accordion-btn">Можно ли самому сделать сертификат?</button>
       <div class="accordion-content">
-        <p>Да, но только если у тебя есть учётка разработчика Apple (99$/год).
-        Для обычного пользователя это сложно и невыгодно.</p>
+        <p>Да, но только при наличии учётки разработчика Apple (99$/год). Для обычного пользователя это невыгодно.</p>
       </div>
 
     </div>
@@ -99,18 +98,19 @@
     <h2>🛒 Как купить сертификат</h2>
     <ol>
       <li>Выбери тип сертификата (обычный или супер-моментальный).</li>
-      <li>Оплати удобным способом: Visa/MasterCard, PayPal, Binance, USDT, Apple Gift Card.</li>
-      <li>Отправь свой UDID (через сайт udid.tech).</li>
+      <li>Оплати удобным способом: Visa/MasterCard, PayPal, Binance Pay, USDT, Apple Gift Card.</li>
+      <li>Отправь свой UDID (через сайт <a href="https://udid.tech" target="_blank">udid.tech</a>).</li>
       <li>Жди подтверждения, что UDID зарегистрирован.</li>
     </ol>
+    <div class="note">Примечание: обычный сертификат может быть отклонён Apple (редко). В этом случае поможет супер-моментальный.</div>
   </section>
 
   <!-- Установщики -->
   <section>
     <h2>📲 Установщики приложений</h2>
-    <p>Для установки iPA нужны специальные программы:</p>
+    <p>Для установки iPA нужны специальные приложения-установщики:</p>
     <div class="installers">
-      <a href="https://esign.yyy" target="_blank" class="btn">⬇️ ESign</a>
+      <a href="https://example.com/esign" target="_blank" class="btn">⬇️ ESign</a>
       <a href="https://usescarlet.com" target="_blank" class="btn">⬇️ Scarlet</a>
       <a href="https://gbox.run" target="_blank" class="btn">⬇️ GBox</a>
       <a href="https://featherapp.io" target="_blank" class="btn">⬇️ Feather</a>
@@ -121,21 +121,21 @@
   <section>
     <h2>🗝 Как импортировать сертификат (.p12 + .mobileprovision)</h2>
     <ul>
-      <li><b>ESign:</b> Certificate Manager → Import → выбрать файлы.</li>
+      <li><b>ESign:</b> Certificate Manager → Import → выбрать файлы .p12 и .mobileprovision → при запросе пароля ввести (если выдан).</li>
       <li><b>Scarlet:</b> Certificates → Import → Apply.</li>
       <li><b>GBox:</b> Certificate Manager → Import → подтвердить.</li>
-      <li><b>Feather:</b> Profiles → Add → выбрать файлы.</li>
+      <li><b>Feather:</b> Profiles → Add → выбрать оба файла → сделать активным.</li>
     </ul>
   </section>
 
   <!-- Установка iPA -->
   <section>
     <h2>📥 Установка iPA файлов</h2>
-    <p>Процесс одинаковый:</p>
+    <p>Процесс везде похож:</p>
     <ol>
-      <li>Импортируй iPA файл в приложение.</li>
-      <li>Нажми «Sign & Install».</li>
-      <li>Жди, пока иконка появится на рабочем столе.</li>
+      <li>Импортируй iPA в установщик (через «Поделиться», «Импорт», «Open in…»).</li>
+      <li>Нажми «Sign / Sign & Install» (подпись → установка).</li>
+      <li>Дождись появления иконки на домашнем экране, затем открой приложение.</li>
     </ol>
   </section>
 
@@ -143,10 +143,142 @@
   <section>
     <h2>🔍 Где искать iPA файлы</h2>
     <ul>
-      <li>📂 Наш репозиторий (сюда вставляется твоя ссылка с GitHub/S3).</li>
+      <li>📂 Ваш репозиторий (вставь сюда ссылку на GitHub/S3/сайт).</li>
       <li>📱 Telegram-каналы (например, iPA Groove).</li>
-      <li>🌐 Сайты: iosninja, appdb и другие.</li>
+      <li>🌐 Специализированные сайты (iosninja, appdb и др.).</li>
     </ul>
+  </section>
+
+  <!-- ПРОБЛЕМЫ И РЕШЕНИЯ -->
+  <section class="troubleshoot">
+    <h2>🧰 Проблемы и решения</h2>
+    <div class="accordion">
+
+      <button class="accordion-btn">«Ненадёжный разработчик» / «Профилю не доверяют»</button>
+      <div class="accordion-content">
+        <ol>
+          <li>Открой <b>Настройки → Основные → Управление VPN и устройством</b> (или «Профили и управление устройством»).</li>
+          <li>Найди профиль установщика/сертификата → нажми <b>Доверять</b>.</li>
+          <li>Перезапусти приложение.</li>
+        </ol>
+        <div class="tip">Если пункта нет: убедись, что профиль установлен; переустанови установщик/профиль.</div>
+      </div>
+
+      <button class="accordion-btn">«Невозможно проверить приложение» / «Integrity could not be verified»</button>
+      <div class="accordion-content">
+        <ol>
+          <li>Проверь интернет (Wi-Fi/сотовая), <b>Дата и время → Автоматически</b> включены.</li>
+          <li>Открой установщик → проверь, что .p12 + .mobileprovision активны.</li>
+          <li>Переподпиши iPA заново и установи ещё раз.</li>
+          <li>Если сертификат истёк/отозван — импортируй новый сертификат и повтори подпись.</li>
+        </ol>
+      </div>
+
+      <button class="accordion-btn">Приложение сразу вылетает после установки</button>
+      <div class="accordion-content">
+        <ul>
+          <li>Часто это признак <b>отозванного сертификата</b> или некорректной подписи.</li>
+          <li>Открой установщик → проверь срок действия сертификата; импортируй свежий .p12 + .mobileprovision.</li>
+          <li>Переустанови iPA с новой подписью.</li>
+        </ul>
+      </div>
+
+      <button class="accordion-btn">Установка зависает на «Ожидание…» / «Waiting…»</button>
+      <div class="accordion-content">
+        <ol>
+          <li>Проверь свободную память (желательно ≥ 2× размера iPA).</li>
+          <li>Переключись с Wi-Fi на LTE/5G или наоборот.</li>
+          <li>Перезагрузи устройство; попробуй установить ещё раз.</li>
+          <li>В установщике очисти кэш/временные файлы, повтори подпись.</li>
+        </ol>
+      </div>
+
+      <button class="accordion-btn">ESign / Scarlet / GBox не видят мои .p12 / .mobileprovision</button>
+      <div class="accordion-content">
+        <ul>
+          <li>Убедись, что передаёшь файлы через «Поделиться»/«Открыть в…» именно в нужный установщик.</li>
+          <li>Если есть пароль на .p12 — введи корректно; иначе импорт не применится.</li>
+          <li>Импортируй <b>оба</b> файла (.p12 и .mobileprovision), затем сделай профиль активным.</li>
+        </ul>
+      </div>
+
+      <button class="accordion-btn">GBox требует «Режим разработчика»</button>
+      <div class="accordion-content">
+        <ol>
+          <li>Открой <b>Настройки → Конфиденциальность и безопасность</b>.</li>
+          <li>Прокрути вниз и включи <b>Режим разработчика</b> → устройство перезагрузится.</li>
+          <li>Запусти GBox снова и продолжи установку.</li>
+        </ol>
+      </div>
+
+      <button class="accordion-btn">«Unable to install» / «Приложение не установлено»</button>
+      <div class="accordion-content">
+        <ul>
+          <li>Проверь: достаточно ли места, стабильный ли интернет, не повреждён ли iPA.</li>
+          <li>Переустанови установщик либо попробуй альтернативный (Scarlet ↔ ESign ↔ GBox ↔ Feather).</li>
+          <li>Подпиши iPA заново; иногда помогает смена имени бандла/версии внутри установщика.</li>
+        </ul>
+      </div>
+
+      <button class="accordion-btn">После обновления iOS приложения перестали открываться</button>
+      <div class="accordion-content">
+        <ul>
+          <li>Вероятно, старая подпись стала недействительной. Подпиши и установи iPA заново.</li>
+          <li>Проверь актуальность сертификата, при необходимости импортируй новый.</li>
+        </ul>
+      </div>
+
+      <button class="accordion-btn">Как проверить, действует ли мой сертификат?</button>
+      <div class="accordion-content">
+        <ul>
+          <li>Внутри установщика открой раздел сертификатов/профилей — смотри срок действия.</li>
+          <li>Если истёк — импортируй новый .p12 + .mobileprovision и подпиши приложения заново.</li>
+        </ul>
+      </div>
+
+      <button class="accordion-btn">Нет раздела «Управление устройством» в Настройках</button>
+      <div class="accordion-content">
+        <ul>
+          <li>Раздел появляется только после установки профиля/сертификата.</li>
+          <li>Переустанови профиль из установщика и вернись в Настройки.</li>
+        </ul>
+      </div>
+
+      <button class="accordion-btn">«Профиль повреждён» / «Профиль не устанавливается»</button>
+      <div class="accordion-content">
+        <ul>
+          <li>Скачай профиль заново через Safari (не через сторонний браузер).</li>
+          <li>Проверь дату/время (автоматически) и соединение с интернетом.</li>
+        </ul>
+      </div>
+
+      <button class="accordion-btn">Ошибка «Недостаточно прав» при подписи</button>
+      <div class="accordion-content">
+        <ul>
+          <li>Проверь, что загрузил <b>оба</b> файла (.p12 и .mobileprovision) и активировал их.</li>
+          <li>Если .p12 защищён паролем — введи корректный пароль.</li>
+        </ul>
+      </div>
+
+      <button class="accordion-btn">Где включить «Доверять» после установки?</button>
+      <div class="accordion-content">
+        <ol>
+          <li><b>Настройки → Основные → Управление VPN и устройством</b>.</li>
+          <li>Открой нужный профиль (имя разработчика/установщика) → <b>Доверять</b>.</li>
+        </ol>
+      </div>
+
+      <button class="accordion-btn">Как полностью «обнулить» и начать заново</button>
+      <div class="accordion-content">
+        <ol>
+          <li>Удалить установленные приложения, очистить кэш установщика.</li>
+          <li>Удалить профиль разработчика в «Управление устройством».</li>
+          <li>Переустановить установщик, импортировать актуальные .p12 + .mobileprovision.</li>
+          <li>Подписать и установить iPA заново.</li>
+        </ol>
+      </div>
+
+    </div>
   </section>
 
 </main>
